[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cccs"
version = "2026.03.15"
dependencies = [
  "numpy",
  "pyproj",
  "netCDF4",
  "scipy",
  "matplotlib",
  "cartopy"
]
authors = [
  {name = "Camden Opfer"}
]
description = "Camden's Computational Climate Scripts"
dynamic = ["readme"]

[project.urls]
Repository = "https://github.com/cmopfer-ubc/cccs"

[tool.setuptools.packages.find]
where = ["lib"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}